# seldom

./: .gitignore  README.md  arxiv.tex  bibliography.bib  environment.yml  plots.ipynb  pyproject.toml  setup.py
seldom/: __init__.py  integrate.py
seldom/src/: decl.hpp  integrate.cpp  seldom_core.cpp  utils.hpp
tests/: test_integrate.py
