[project]
name = "seldom"
dynamic = ["version"]
authors = [
    { name="Anav Sood", email="anavsood@gmail.com" },
]
maintainers = [
    { name="Anav Sood", email="anavsood@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
description = "Selective inference using p-values."
license = {file = "LICENSE"}
keywords = ["selective inference"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.2, <2",
    "scipy>=1.10.1, <2",
    "matplotlib>=3.7.0, <4",
    "ipython>=8.17.2, <9",
]

[tool.poetry]
name = "seldom"
version = "0.0.0"
description = "Selective inference using p-values."
authors = [
    "Anav Sood <anavsood@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
ipython = "^8.17.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.11.1"
jupyter = "^1.0.0"
jupytext = "^1.14.5"
tqdm = "^4.65.0"

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[build-system]
requires = [
    "setuptools", 
    "wheel",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build"

[tool.setuptools_scm]